# Beacon

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude/plugins/beacon/: plugin.json
.claude/plugins/beacon/hooks/: smoke-check.md  stop-gate.md
.claude/plugins/beacon/skills/: socratic-spec.md  verification-loop.md
.claude/plugins/fresnel-fir/: plugin.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/beacon-compiler/: Cargo.toml
crates/beacon-compiler/src/: compile.rs  lib.rs  predicate.rs  protocol.rs  validate.rs
crates/beacon-compiler/tests/: integration_tests.rs  predicate_tests.rs  protocol_tests.rs  validate_tests.rs
crates/beacon-core/: Cargo.toml
crates/beacon-core/src/: analytics.rs  campaign.rs  lib.rs  limits.rs  mcp.rs  memory.rs
crates/beacon-core/tests/: campaign_tests.rs  mcp_tests.rs
crates/beacon-explore/: Cargo.toml
crates/beacon-explore/src/: lib.rs
crates/beacon-explore/src/adapt/: coordinator.rs  decay.rs  directive.rs  reachability.rs  timeout.rs
crates/beacon-explore/src/solver/: constraint.rs  coverage.rs  domain.rs  fracture.rs  mod.rs  pipeline.rs  pool.rs  rng.rs  search.rs
crates/beacon-explore/src/traversal/: engine.rs  mod.rs  runner.rs  signal.rs  strategy.rs  trace.rs  vector_source.rs  weight_table.rs
crates/beacon-explore/tests/: traversal_tests.rs
crates/beacon-ir/: Cargo.toml
crates/beacon-ir/src/: expr.rs  lib.rs  parse.rs  types.rs
crates/beacon-ir/tests/: expr_tests.rs  parse_tests.rs  types_tests.rs
crates/beacon-model/: Cargo.toml
crates/beacon-model/src/: effect.rs  eval.rs  invariant.rs  lib.rs  simulate.rs  state.rs
crates/beacon-model/tests/: effect_tests.rs  eval_tests.rs  invariant_tests.rs  model_state_tests.rs  simulate_tests.rs  temporal_tests.rs
crates/beacon-sandbox/: Cargo.toml
crates/beacon-sandbox/src/: config.rs  lib.rs  sandbox.rs  snapshot.rs
crates/beacon-sandbox/tests/: sandbox_tests.rs  snapshot_tests.rs
crates/beacon-vif/: Cargo.toml
crates/beacon-vif/src/: adapter.rs  validate.rs
crates/beacon-vif/tests/: adapter_tests.rs  integration_tests.rs  validate_tests.rs
crates/fresnel-fir-compiler/: Cargo.toml
crates/fresnel-fir-compiler/src/: compile.rs  graph.rs  predicate.rs  protocol.rs  validate.rs
crates/fresnel-fir-compiler/tests/: integration_tests.rs  predicate_tests.rs  protocol_tests.rs  validate_tests.rs
crates/fresnel-fir-core/: Cargo.toml
crates/fresnel-fir-core/src/: campaign.rs  limits.rs  mcp.rs  memory.rs
crates/fresnel-fir-core/tests/: campaign_tests.rs  mcp_tests.rs
crates/fresnel-fir-explore/: Cargo.toml
crates/fresnel-fir-explore/src/: lib.rs
crates/fresnel-fir-explore/src/adapt/: mod.rs  reachability.rs
crates/fresnel-fir-explore/src/solver/: constraint.rs  coverage.rs  domain.rs  fracture.rs  mod.rs  pipeline.rs  pool.rs  search.rs
crates/fresnel-fir-explore/src/traversal/: engine.rs  mod.rs  runner.rs  signal.rs  strategy.rs  trace.rs  vector_source.rs  weight_table.rs
crates/fresnel-fir-explore/tests/: traversal_tests.rs
crates/fresnel-fir-ir/: Cargo.toml
crates/fresnel-fir-ir/src/: expr.rs  parse.rs  types.rs
crates/fresnel-fir-ir/tests/: expr_tests.rs  parse_tests.rs  types_tests.rs
crates/fresnel-fir-model/: Cargo.toml
crates/fresnel-fir-model/src/: effect.rs  eval.rs  invariant.rs  simulate.rs  temporal.rs
crates/fresnel-fir-model/tests/: effect_tests.rs  eval_tests.rs  invariant_tests.rs  model_state_tests.rs  simulate_tests.rs  temporal_tests.rs
crates/fresnel-fir-sandbox/: Cargo.toml
crates/fresnel-fir-sandbox/src/: sandbox.rs  snapshot.rs
crates/fresnel-fir-sandbox/tests/: sandbox_tests.rs  snapshot_tests.rs
crates/fresnel-fir-vif/: Cargo.toml
crates/fresnel-fir-vif/src/: adapter.rs  lib.rs  validate.rs
crates/fresnel-fir-vif/tests/: adapter_tests.rs  integration_tests.rs  validate_tests.rs
docs/: architecture.md  beacon-ir-schema.md  troubleshooting.md
docs/plans/: 2026-02-17-beacon-harness-design.md  2026-02-17-beacon-implementation-plan.md  initial-github-release-harder-plan.md  initial-github-release-plan.md
docs/release/: baseline-audit-2026-02-17.md  blockers.md  code-freeze-policy.md  final-triage.md  known-issues.md  post-release-smoke.md  rc-runbook.md  rc1-evidence.md  rc2-evidence.md  release-checklist.md  release-decisions-v0.1.0.md  release-scope-v0.1.0.md  rollback-drill.md  security-baseline.md
installers/: package-installer.ps1  package-installer.sh
scripts/: release-smoke.ps1
(+5 files in other folders)
