[workspace]
resolver = "2"
members = [
    "crates/beacon-ir",
    "crates/beacon-compiler",
    "crates/beacon-model",
    "crates/beacon-sandbox",
    "crates/beacon-vif",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
