[workspace]
resolver = "2"
members = [
    "crates/fresnel-fir-ir",
    "crates/fresnel-fir-compiler",
    "crates/fresnel-fir-model",
    "crates/fresnel-fir-sandbox",
    "crates/fresnel-fir-vif",
    "crates/fresnel-fir-explore",
    "crates/fresnel-fir-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasmtime = "41.0.1"
wat = "1"
varisat = "0.2"
rayon = "1"
crossbeam = "0.8"
rand = "0.8"
rand_chacha = "0.3"
tokio = { version = "1", features = ["full"] }
