[package]
name = "beacon-core"
version.workspace = true
edition.workspace = true

[dependencies]
beacon-ir = { path = "../beacon-ir" }
beacon-compiler = { path = "../beacon-compiler" }
beacon-model = { path = "../beacon-model" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
