[package]
name = "beacon-vif"
version.workspace = true
edition.workspace = true

[dependencies]
beacon-ir = { path = "../beacon-ir" }
beacon-sandbox = { path = "../beacon-sandbox" }
wasmtime.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
wat.workspace = true
